# easy-ml-deploy

./: .gitignore  README.md  mldeploy.py  pyproject.toml  sample_x.txt  setup.py  test.py
src/mldeploy/: __init__.py  mldeploy.py
tests/: test.py
